v1.0.1 - Fix body overflow CSS bug in modals, add bower.json to grunt bump

--- a/src/sass/elements/_modals.scss
+++ b/src/sass/elements/_modals.scss
@@ -6,7 +6,7 @@ $modal-transition-speed: 0.2s;
 $modal-bg-opacity: 0.6;
 
 body.ngdialog-open {
-    overflow: inherit; // keep page from jumping when scrollbar disappears
+    overflow: inherit !important; // keep page from jumping when scrollbar disappears
     .ngdialog-overlay {
         opacity: $modal-bg-opacity;
     }
